# code-grading-service

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: architecture.md  design-class-baseline.md  design-llm-usage-plan.md  design-prompt-baseline.md  design-testing-plan.md  experiments.md
docs/design/: cost-optimization.md  design-class-baseline.md  design-llm-usage-plan.md  design-prompt-baseline.md  design-testing-plan.md  experiment-plan.md  prompt-structure.md
docs/reference/: prompt.py  rubric.py
docs/thesis/: anova-tinjauan.md  hasil-eksperimen.md  icc-metodologi.md  icc-tinjauan.md  literature-anova.md  literature-icc.md  penelitian-terkait.md
experiments/: RUNBOOK.md  analysis.py  config.py  gemini_batch.py  metrics.py  prompt.py  runner.py  sanity_grade.py  scenarios.py  state.json  state.py
experiments/dataset/: few_shot.json  grade-review.md  problems.json  submissions.json
experiments/grading/: cli.py  rubric.py  sanity.py  worksheet.py
experiments/holdout/: README.md  RESULTS.md  grading_sheet_blind.csv  problems.json  state.json  submissions.json  sync_scores.py
experiments/results/: summary.txt
src/api/: dependencies.py
src/config/: logging.py  settings.py
src/engine/: input_handler.py  input_parser.py  llm_interface.py  prompt_orchestrator.py  response_parser.py
src/llm/: anthropic.py  base.py  gemini.py  openai.py
src/prompts/: builder.py
src/services/: grading_service.py
src/utils/: __init__.py  s3.py
tests/: _fakes.py  conftest.py  test_api_endpoints.py  test_b_live.py  test_grading_controller.py  test_grading_service.py  test_input_handler.py  test_input_parser.py  test_llm_interface.py  test_nonfunctional_live.py  test_prompt_orchestrator.py  test_response_parser.py  test_response_parser_robustness.py  test_s3_utils.py
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
(+209 files in other folders)
